--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>at.ac.ait.ubicity</groupId>
 			<artifactId>ubicity-commons</artifactId>
-			<version>0.2.1-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 	<build>
