Common PropertyLoader & Minor Fixxes

--- a/src/main/resources/ondemand.cfg
+++ b/src/main/resources/ondemand.cfg
@@ -1,4 +1,6 @@
 # Reverse command & control port
 plugins.ondemand.reverse_cac_host=localhost
+
+# corresponds to port in JIT in core package!
 plugins.ondemand.reverse_cac_port=9876
 plugins.ondemand.reverse_cac_timeout=10000
