--- a/src/main/resources/ondemand.cfg
+++ b/src/main/resources/ondemand.cfg
@@ -1,6 +1,5 @@
 include = env.cfg
 
 # Reverse command & control port
-plugins.ondemand.reverse_cac_host=localhost
-
-plugins.ondemand.reverse_cac_timeout=10000
+plugins.ondemand.http_host=localhost
+plugins.ondemand.http_timeout=10000
