--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 			<artifactId>elasticsearch</artifactId>
 			<version>1.2.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>1.19</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
