--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>at.ac.ait.ubicity</groupId>
 		<artifactId>ubicity-root</artifactId>
-		<version>0.4.0-SNAPSHOT</version>
+		<version>1.1.0-SNAPSHOT</version>
 		<relativePath>../ubicity-root/pom.xml</relativePath>
 	</parent>
 
-	<artifactId>ubicity-ondemand</artifactId>
+	<artifactId>ubicity-es-on-demand</artifactId>
 	<packaging>jar</packaging>
 
-	<name>ubicity-ondemand</name>
+	<name>ubicity-es-on-demand</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
